# ai-agents-for-sap

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cards/: README.md  five-questions.md  four-agent-shapes.md  go-live-checklist.md  low-code-or-pro-code.md
console/: README.md  extra_agents.py  index.html  serve.py  test_console.py
discovery/: README.md  __init__.py  cleancore.py  diagrams.py  explore.py  ingest.py  landscape.py  models.py  opportunity.py  register.py  scorecard.py  sources.py
discovery/samples/: nordwind-processes.csv  nordwind-register.json  nordwind-register.md
discovery/tests/: test_analysis.py  test_discovery.py  test_ingest.py  test_landscape.py
docs/: CHAPTERS.md  getting-started.md  scenario.md
lifecycle/: README.md  __init__.py  check.py  examples.py  gate.py  models.py
lifecycle/tests/: test_lifecycle.py
patterns/pattern-01-finance-document-to-draft-posting/: README.md  my-invoice.example.json  run_agent.py  run_demo.py
patterns/pattern-02-invoice-triage/: README.md  run_agent.py
patterns/pattern-03-three-way-match/: README.md  run_agent.py
patterns/pattern-04-dispute-assistant/: README.md  run_agent.py
patterns/pattern-05-procurement-approval-packet/: README.md  run_agent.py
patterns/pattern-06-close-orchestration/: README.md  run_agent.py
patterns/pattern-07-service-resolution/: README.md  run_agent.py
patterns/pattern-08-cash-application/: README.md  run_agent.py
patterns/pattern-09-sales-order/: README.md  run_agent.py
shared/: dotenv_loader.py
(+119 files in other folders)
